--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
     "mocha": "^2.4.5",
+    "moment": "^2.17.1",
     "node-sass": "^3.13.1",
     "react-addons-test-utils": "^0.14.7",
     "sass-loader": "^3.2.3",
