--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.16.0",
     "css-loader": "^0.23.1",
+    "deep-freeze-strict": "^1.1.1",
     "expect": "^1.14.0",
     "foundation-sites": "^6.3.0",
     "jquery": "^2.2.1",
