--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "moment": "^2.17.1",
     "node-sass": "^3.13.1",
     "react-addons-test-utils": "^0.14.7",
+    "react-redux": "^4.4.1",
     "redux": "^3.6.0",
     "sass-loader": "^3.2.3",
     "script-loader": "^0.6.1",
