--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.15.3",
     "express": "^4.14.0",
+    "firebase": "^3.6.8",
     "node-uuid": "^1.4.7",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
@@ -44,6 +45,7 @@
     "react-addons-test-utils": "^0.14.7",
     "react-redux": "^4.4.1",
     "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0",
     "sass-loader": "^3.2.3",
     "script-loader": "^0.6.1",
     "style-loader": "^0.13.0",
